MainWindow: statusbar display current stats (event:QEvent::UpdateRequest); disable to change size - set fixed size in constructor, remove size-grip from statusbar

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -265,7 +265,11 @@
    </widget>
    <addaction name="menu"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="sizeGripEnabled">
+    <bool>false</bool>
+   </property>
+  </widget>
   <action name="action_3">
    <property name="text">
     <string>Редактировать...</string>
