--- a/LexNew.qrc
+++ b/LexNew.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/heart.png</file>
+        <file>images/Lex.png</file>
     </qresource>
 </RCC>
