--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>353</width>
-    <height>374</height>
+    <height>429</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="closeButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>280</y>
+      <x>250</x>
+      <y>350</y>
       <width>80</width>
       <height>23</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
+      <y>350</y>
       <width>80</width>
       <height>23</height>
      </rect>
@@ -88,21 +88,22 @@
    <widget class="QPushButton" name="restoreDefaultsButton">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>250</x>
       <y>240</y>
-      <width>171</width>
-      <height>23</height>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Восстановить умолчания</string>
+     <string>Восстановить 
+умолчания</string>
     </property>
    </widget>
    <widget class="QPushButton" name="moveTranslationsButton">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>200</y>
+      <y>300</y>
       <width>141</width>
       <height>23</height>
      </rect>
@@ -114,9 +115,9 @@
    <widget class="QPushButton" name="applyButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>200</y>
-      <width>81</width>
+      <x>250</x>
+      <y>210</y>
+      <width>91</width>
       <height>23</height>
      </rect>
     </property>
@@ -249,6 +250,58 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QGroupBox" name="trDirectionGroupBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>190</y>
+      <width>151</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Направление перевода</string>
+    </property>
+    <widget class="QRadioButton" name="forwardRadioButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>96</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>прямое</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="backwardRadioButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>96</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>обратное</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="mixedRadioButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>96</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>смешанное</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
